--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "keywords": ["css", "manipulation", "preprocess", "transform"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
-    "cssom": "0.2.4"
+    "cssom": "0.2.4",
+    "commander": "1.0.0"
   },
   "devDependencies": {
     "mocha": "*",
