--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "keywords": ["css", "manipulation", "preprocess", "transform"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
-    "css": "1.0.3"
+    "css": "1.0.3",
+    "commander": "1.0.4"
   },
   "devDependencies": {
     "mocha": "*",
