add rework(1) to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "CSS manipulations built on CSSOM",
   "keywords": ["css", "manipulation", "preprocess", "transform"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "bin": {
+    "rework": "./bin/rework"
+  },
   "dependencies": {
     "css": "1.0.3",
     "commander": "1.0.4"
