add rgba(color, a) plugin

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "css": "1.0.7",
-    "commander": "1.0.4"
+    "commander": "1.0.4",
+    "color-parser": "0.0.1"
   },
   "devDependencies": {
     "mocha": "*",
