--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "css": "1.0.7",
     "commander": "1.0.4",
-    "color-parser": "0.0.1"
+    "color-parser": "0.0.1",
+    "debug": "*"
   },
   "devDependencies": {
     "mocha": "*",
