Add configs for Travis CI

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mocha": "*",
     "should": "*"
   },
-  "main": "index"
+  "main": "index",
+  "scripts": {
+    "test": "mocha --require should --reporter spec"
+  }
 }
