Add rework.inline to encode images to base64

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "css": "1.0.7",
     "commander": "1.0.4",
     "color-parser": "0.1.0",
+    "mime": "1.2.9",
     "debug": "*"
   },
   "devDependencies": {
