--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "CSS manipulations built on CSSOM",
   "keywords": ["css", "manipulation", "preprocess", "transform"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/visionmedia/rework.git"
+  },
   "dependencies": {
     "css": "1.2.0",
     "commander": "1.0.4",
