--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css": "1.4.1",
     "commander": "1.0.4",
     "color-parser": "0.1.0",
+    "hsb2rgb": "1.x.x",
     "mime": "1.2.9",
     "debug": "*",
     "rework-inherit": "0.1.5",
