--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "rework",
   "version": "0.18.3",
   "description": "CSS manipulations built on CSSOM",
-  "keywords": ["css", "manipulation", "preprocess", "transform"],
+  "keywords": [
+    "css",
+    "manipulation",
+    "preprocess",
+    "transform"
+  ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "repository": {
     "type": "git",
     "url": "git://github.com/visionmedia/rework.git"
   },
   "dependencies": {
-    "css": "1.4.4",
+    "css": "1.6.0",
     "commander": "1.0.4",
     "color-parser": "0.1.0",
     "hsb2rgb": "1.0.2",
     "mime": "1.2.9",
     "debug": "*",
     "rework-inherit": "0.2.1",
-    "rework-visit": "1.0.0"
+    "rework-visit": "1.0.0",
+    "convert-source-map": "~0.3.1"
   },
   "devDependencies": {
     "mocha": "*",
