--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "css",
     "manipulation",
     "preprocess",
-    "transform"
+    "transform",
+    "browser",
+    "server"
   ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/visionmedia/rework.git"
+    "url": "git://github.com/reworkcss/rework.git"
   },
   "dependencies": {
     "css": "1.6.0",
