Add component dependency
People without a globally installed component get a make error.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "component": "~0.19.9"
   },
   "main": "index",
   "scripts": {
