--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "url": "git://github.com/reworkcss/rework.git"
   },
   "dependencies": {
-    "css": "1.6.0",
     "color-parser": "0.1.0",
     "hsb2rgb": "1.0.2",
     "mime": "1.2.11",
     "debug": "*",
     "rework-inherit": "~0.2.1",
     "rework-visit": "1.0.0",
-    "convert-source-map": "~0.3.1"
+    "convert-source-map": "~0.3.1",
+    "css-parse": "^1.7.0",
+    "css-stringify": "^1.4.1"
   },
   "devDependencies": {
     "mocha": "*",
