--- a/package.json
+++ b/package.json
@@ -2,37 +2,35 @@
   "name": "rework",
   "version": "0.20.3",
   "description": "CSS manipulations built on CSSOM",
-  "keywords": [
-    "css",
-    "manipulation",
-    "preprocess",
-    "transform",
-    "browser",
-    "server"
+  "main": "index",
+  "files": [
+    "index.js"
   ],
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/reworkcss/rework.git"
-  },
   "dependencies": {
-    "css": "1.6.0",
-    "color-parser": "0.1.0",
-    "hsb2rgb": "1.0.2",
-    "mime": "1.2.11",
+    "css-parse": "^1.7.0",
+    "css-stringify": "^1.4.1",
+    "mime": "^1.2.11",
     "debug": "*",
-    "rework-inherit": "~0.2.1",
-    "rework-visit": "1.0.0",
-    "convert-source-map": "~0.3.1"
+    "convert-source-map": "^0.3.3"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
     "component": "~0.19.9"
   },
-  "main": "index",
   "scripts": {
-    "prepublish": "make rework.js",
     "test": "mocha --require should --reporter spec"
+  },
+  "keywords": [
+    "css",
+    "manipulation",
+    "preprocess",
+    "transform",
+    "server"
+  ],
+  "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/reworkcss/rework.git"
   }
 }
