--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "index.js"
   ],
   "dependencies": {
-    "css-parse": "^1.7.0",
-    "css-stringify": "^1.4.1",
+    "css": "^2.0.0",
     "mime": "^1.2.11",
     "debug": "*",
     "convert-source-map": "^0.3.3"
