--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   ],
   "dependencies": {
     "css": "^2.0.0",
-    "mime": "^1.2.11",
-    "debug": "*",
     "convert-source-map": "^0.3.3"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*"
+    "mocha": "^1.20.1",
+    "should": "^4.0.4"
   },
   "scripts": {
     "test": "mocha --require should --reporter spec"
