Bluebird dep fix.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "clone": "^0.2.0",
     "convert-source-map": "^0.3.3",
-    "css": "^2.0.0"
+    "css": "^2.0.0",
+    "bluebird": "^2.8.2"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
-    "should": "^4.0.4",
-    "bluebird": "^2.8.2"
+    "should": "^4.0.4"
   },
   "scripts": {
     "test": "mocha --require should --reporter spec"
