--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "index.js"
   ],
   "dependencies": {
-    "clone": "^0.2.0",
     "convert-source-map": "^0.3.3",
-    "css": "^2.0.0",
-    "bluebird": "^2.8.2"
+    "css": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
