--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "index.js"
   ],
   "dependencies": {
+    "bluebird": "^2.9.3",
     "convert-source-map": "^0.3.3",
     "css": "^2.0.0"
   },
