--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+sudo: false
+
 language: node_js
+
 node_js:
-  - "0.10"
+  - 6
+  - 4
+
+cache:
+  directories:
+    - node_modules
+
+install:
+  - npm i -g npm@latest
+  - npm install
