--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "index.js"
   ],
   "dependencies": {
-    "css": "^2.0.0",
-    "convert-source-map": "^0.3.3"
+    "convert-source-map": "^0.3.3",
+    "css": "^3.0.0"
   },
   "devDependencies": {
-    "mocha": "^1.20.1",
-    "should": "^4.0.4"
+    "mocha": "^8.3.2",
+    "should": "^4.6.5"
   },
   "scripts": {
     "test": "mocha --require should --reporter spec"
